--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <u>Nike, </u> originally known as Blue Ribbon Sports (BRS), was founded by University of Oregon track athlete Phil Knight and his coach, Bill Bowerman, on January 25, 1964.[14] The company initially operated in Eugene, Oregon as a distributor for Japanese shoe maker Onitsuka Tiger, making most sales at track meets out of Knight's automobile.[14]
     According to Otis Davis, a University of Oregon student-athlete coached by Bowerman and Olympic gold medalist at the 1960 Summer Olympics, his coach made the first pair of Nike shoes for him, contradicting a claim that they were made for Phil Knight. According to Davis, "I told Tom Brokaw that I was the first. I don't care what all the billionaires say. Bill Bowerman made the first pair of shoes for me. People don't believe me. In fact, I didn't like the way they felt on my feet. There was no support and they were too tight. But I saw Bowerman made them from the waffle iron, and they were mine".[15]
     In its first year in business, BRS sold 1,300 pairs of Japanese running shoes grossing $8,000.[16] By 1965, sales had reached $20,000. In 1966, BRS opened its first retail store at 3107 Pico Boulevard in Santa Monica, California. In 1967, due to increasing sales, BRS expanded retail and distribution operations on the East Coast, in Wellesley, Massachusetts.[17]
-    <u>Vintage Nike "waffle racer" sneaker</u>
+    <u>Vintage Nike "waffle racer" sneaker</u></p>
     <br>
     <p>    In 1971, the Bowerman used his wife's waffle iron to experiment on rubber to create a new sole for track shoes that would grip but be lightweight and increase the runner's speed. Oregon's Hayward Field was transitioning to an artificial surface, and Bowerman wanted a sole which could grip to grass or bark dust without the use of spikes.
         He was talking to his wife about this puzzle over breakfast, when the waffle iron idea came into play.[18] Bowerman's design led to the introduction of the "Moon Shoe" in 1972, so named because the waffle tread was said to resemble the footprints left by astronauts on the moon. Further refinement resulted in the "Waffle Trainer" in 1974, which helped fuel the explosive growth of Blue Ribbon Sports/Nike.[19][20]
@@ -22,6 +22,9 @@
         Throughout the 1980s, Nike expanded its product line to encompass many sports and regions throughout the world.<s>[33]</s> In 1990, Nike moved into its eight-building World Headquarters campus in Beaverton, Oregon.[34] The first Nike retail store, dubbed Niketown, opened in downtown Portland in November of that year.[3
         Phil Knight announced in mid-2015 that he would step down as chairman of Nike in 2016.<s>[36][37]</s> He officially stepped down from all duties with the company on June 30, 2016.<s>[38]</s></p>
 
+        <p>
+
+        
     In a company public announcement on March 15, 2018, Nike CEO Mark Parker said Trevor Edwards, a top Nike executive who was seen as a potential successor to the chief executive, was relinquishing his position as Nike's brand president and would retire in August<s>[39]</s>
     In October 2019, John Donahoe was announced as the next CEO, and succeeded Parker on January 13, 2020.<s>[40]</s> In November 2019, the company stopped selling directly through Amazon, focusing more on direct relationships with customers.<s>[41]</s>
     </p>
