--- a/lab4.html
+++ b/lab4.html
@@ -179,14 +179,19 @@ margin: 10px;
   background-color: white;
 }
 .product-price{
-  font-size: medium;
+  font-size: large;
   margin-right: 10px;
+  font-weight: bold;
  
   display: flex;
   justify-content: flex-end;
 }
 .card-content-detail-section{
   margin: 5px;
+}
+.product-name{
+  font-size: medium;
+  font-weight: bold;
 }
 
     </style>
@@ -344,6 +349,9 @@ font-weight: bold;
   border-bottom: hidden;
   padding: 5px;
   font-size: small;
+}
+.sidebar-menu-ite{
+  padding: 10px;
 }
 
     </style>
